2014-06-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-mont.c (compute_nQ): Add comment.

	* src/mod.c (mod_inv): Fix comment. X^-1 = 0 when X=0
	is important for Montgomery curve computation.

2014-06-05  Niibe Yutaka  <gniibe@fsij.org>

	* tool/add_openpgp_authkey_from_gpgssh.py: New.

2014-04-17  Niibe Yutaka  <gniibe@fsij.org>

	* src/muladd_256.h (MULADD_256_ASM): New.
	(MULADD_256): Use MULADD_256_ASM.
	* src/ecc-mont.c (mod25638_mul_121665): Add asm implementation.

	* src/bn.c (bn256_add_uint, bn256_sub_uint): Simplify.
	* src/mod25638.c (mod25638_add, mod25638_sub): Simplify.
	(n25638, add19): Remove.
	(ADDWORD_256): Add s_ as source pointer.
	(mod25519_reduce): Remove a call to memcpy.  Use bn256_add_uint.
	* src/ecc-edwards.c (point_double): Simplify.

2014-04-16  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.3.

2014-04-15  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-mont.c: New.

	* src/mod25638.c (p25519): Move from ecc-edwards.c.
	(mod25519_reduce, add19): Likewise.
	(mod25638_reduce) [!ASM_IMPLEMENTATION]: Use bn256_add_uint.

2014-04-14  Niibe Yutaka  <gniibe@fsij.org>

	* src/jpc.c (jpc_to_ac): Error check before mod_inv.

	* src/mod.c (mod_inv): No return value (if N==0 returns ZERO).

	* src/bn.c [BN256_NO_RANDOM]: Only include "random.h" if needed.

2014-04-08  Niibe Yutaka  <gniibe@fsij.org>

	* src/mod.c (mod_inv): Use MAX_GCD_STEPS_BN256.
	Return failure or success.
	* src/jpc.c (jpc_to_ac): Use mod_inv.
	* src/modp256k1.c (modp256k1_inv): Remove.
	* src/modp256r1.c (modp256r1_inv): Remove.

2014-04-07  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (algorithm_attr_ed25519): It's OID only.

2014-04-03  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-edwards.c (eddsa_sign_25519): Change type of OUT.
	* src/openpgp.c (cmd_internal_authenticate): Have a buffer.

	* src/flash.c (flash_init): Fix key address finder.

2014-04-02  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (proc_key_import): Handle EdDSA.